--- a/styles/colors.scss
+++ b/styles/colors.scss
@@ -107,7 +107,9 @@ input {
 
 .shadow- {
   &1 {
-    box-shadow: var(--black) 0 3px 9px -3px;
+    &::before {
+      box-shadow: var(--black) 0 3px 9px -3px;
+    }
   }
 }
 
