--- a/styles/helper/primefaces.scss
+++ b/styles/helper/primefaces.scss
@@ -40,6 +40,9 @@ $p-colors: ('primary', 'secondary', 'info', 'success', 'warn', 'error');
   }
 
   .p-dialog-footer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-end;
     padding: 1.5rem;
 
     button {
@@ -47,22 +50,16 @@ $p-colors: ('primary', 'secondary', 'info', 'success', 'warn', 'error');
       padding: 0.5rem 1.25rem;
     }
 
-    p-footer {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: flex-end;
+    .btn {
+      margin: 0;
 
-      .btn {
-        margin: 0;
-
-        &+.btn {
-          margin-left: 0.5rem;
-        }
+      &+.btn {
+        margin-left: 0.5rem;
       }
+    }
 
-      >* {
-        margin-top: 1rem;
-      }
+    >* {
+      margin-top: 1rem;
     }
   }
 }
@@ -84,6 +81,10 @@ $p-colors: ('primary', 'secondary', 'info', 'success', 'warn', 'error');
   }
 }
 
+.p-dropdown {
+  width: 100%;
+}
+
 p-chart {
   width: 100% !important;
 
@@ -93,35 +94,47 @@ p-chart {
   }
 }
 
-.p-datepicker {
-  &:not(.p-datepicker-inline) {
-    box-shadow: unset;
+.p-calendar {
+  width: 100%;
 
-    &>* {
-      position: relative;
+  .p-datepicker {
+    min-width: unset;
+
+    .p-datepicker-header {
+      .p-datepicker-month {
+        border: none;
+      }
     }
 
-    &::before {
-      content: '';
-      display: block;
-      height: 100%;
-      width: 100%;
-      position: absolute;
-      box-shadow: var(--card-shadow);
-      border-radius: inherit;
-      top: 0;
-      left: 0;
-      z-index: 0;
+    &:not(.p-datepicker-inline) {
+      box-shadow: unset;
+
+      &>* {
+        position: relative;
+      }
+
+      &::before {
+        content: '';
+        display: block;
+        height: 100%;
+        width: 100%;
+        position: absolute;
+        box-shadow: var(--card-shadow);
+        border-radius: inherit;
+        top: 0;
+        left: 0;
+        z-index: 0;
+      }
     }
-  }
 
-  table td>span {
-    width: 2.25rem;
-    height: 2.25rem;
-  }
+    table td>span {
+      width: 2.25rem;
+      height: 2.25rem;
+    }
 
-  .p-datepicker-buttonbar {
-    padding: 0;
+    .p-datepicker-buttonbar {
+      padding: 0;
+    }
   }
 }
 
@@ -137,25 +150,27 @@ p-chart {
 
 .p-carousel {
   .p-carousel-items-content {
-    padding: 1rem;
+    /* padding: 1rem; */
 
-    .p-carousel-item {
-      display: flex;
-      justify-content: center;
-      padding: 0 0.5rem;
-      border: thin solid transparent;
+    .p-carousel-items-container {
+      gap: 0.5rem;
 
-      &:hover {
-        border-color: var(--primary);
-      }
+      .p-carousel-item {
+        display: flex;
+        justify-content: center;
+        /* padding: 0 0.5rem; */
+        /* border: thin solid transparent; */
 
-      .p-carousel-items-container {
-        gap: 1rem;
+        &:hover {
+          border-color: var(--primary);
+        }
+
       }
     }
 
     .p-carousel-item-active:nth-of-type(2) {
-      padding: 0 0.125rem // transform: scale(1.25);
+      /* padding: 0 0.125rem; */
+      // transform: scale(1.25);
     }
   }
 
@@ -190,11 +205,23 @@ p-chart {
     min-width: 2rem;
     border: none !important;
   }
+}
 
-  @each $color in $p-colors {
-    &.p-toast-message-#{$color} {
-      background-color: var(--#{$color}) !important;
-      color: var(--#{$color}-c) !important;
-    }
+.p-button {
+  background-color: var(--primary);
+
+  &:hover {
+    background-color: hsl(var(--primary-hs), calc(var(--primary-l) - 20%));
+  }
+}
+
+.p-hidden-accessible {
+  display: none;
+}
+
+@each $color in $p-colors {
+  .p-toast-message-#{$color} {
+    background-color: var(--#{$color}) !important;
+    color: var(--#{$color}-c) !important;
   }
 }
